--- a/2097_pop/index.html
+++ b/2097_pop/index.html
@@ -43,9 +43,9 @@ https://www.tooplate.com/view/2097-pop
                                 <div class="grid__item" id="home-link">
                                     <div class="product">
                                         <div class="tm-nav-link">
-                                            <i class="fas fa-home fa-3x tm-nav-icon"></i>
+                                            <i class="fas fa-gamepad fa-3x tm-nav-icon"></i>
                                             <span class="tm-nav-text">Welcome</span>
-                                            <div class="product__bg"></div>        
+                                            <div class="product__bg"></div>
                                         </div>                                    
                                         <div class="product__description">
                                             <div class="row mb-3">
@@ -73,7 +73,7 @@ https://www.tooplate.com/view/2097-pop
                                 <div class="grid__item" id="team-link">
                                     <div class="product">
                                         <div class="tm-nav-link">
-                                            <i class="fas fa-users fa-3x tm-nav-icon"></i>
+                                            <i class="fas fa-fire fa-3x tm-nav-icon"></i>
                                             <span class="tm-nav-text">Our Team</span>
                                             <div class="product__bg"></div>            
                                         </div>                                     
@@ -103,7 +103,7 @@ https://www.tooplate.com/view/2097-pop
                                 <div class="grid__item">
                                     <div class="product">
                                         <div class="tm-nav-link">
-                                            <i class="fas fa-handshake fa-3x tm-nav-icon"></i>
+                                            <i class="fas fa-puzzle-piece fa-3x tm-nav-icon"></i>
                                             <span class="tm-nav-text">Our Work</span>
                                             <div class="product__bg"></div>             
                                         </div>                                                                 
@@ -185,9 +185,11 @@ https://www.tooplate.com/view/2097-pop
                 </div>                
             </div>
             <footer>
-                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2023</span> Oonga Boonga Games 
-                
-                Design: <a rel="nofollow" href="https://www.tooplate.com" class="tm-text-highlight">Tooplate</a></p>
+                <p class="small tm-copyright-text">
+                    Copyright &copy; <span class="tm-current-year">2023</span> Oonga Boonga Games
+                    <!-- MIRAR COMO AÑADIR ESTA IMAGEN <img src="img/LogoConejoVerdeFondoNegro.png" class="img-fluid"> -->
+                    Design: <a rel="nofollow" href="https://www.tooplate.com" class="tm-text-highlight">Tooplate</a>
+                </p>
             </footer>
         </div> <!-- .tm-main-content -->  
     </div>
