--- a/2097_pop/index.html
+++ b/2097_pop/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Pop HTML CSS Template</title>
-<!--
+    <!--
 
-Template 2097 Pop
+    Template 2097 Pop
 
-https://www.tooplate.com/view/2097-pop
+    https://www.tooplate.com/view/2097-pop
 
--->
+    -->
     <!-- load CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300">  <!-- Google web font "Open Sans" -->
     <link rel="stylesheet" href="css/bootstrap.min.css">                                  <!-- https://getbootstrap.com/ -->
     <link rel="stylesheet" href="fontawesome/css/fontawesome-all.min.css">                <!-- https://fontawesome.com/ -->
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>                       <!-- http://kenwheeler.github.io/slick/ -->
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />                       <!-- http://kenwheeler.github.io/slick/ -->
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="css/tooplate-style.css">                               <!-- Templatemo style -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this in a modern browser such as latest version of Chrome or Microsoft Edge.");</script>
-    
+    <script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this in a modern browser such as latest version of Chrome or Microsoft Edge.");</script>
+
 </head>
 
 <body>
@@ -73,7 +74,7 @@ https://www.tooplate.com/view/2097-pop
                                 <div class="grid__item" id="team-link">
                                     <div class="product">
                                         <div class="tm-nav-link">
-                                            <i class="fas fa-fire fa-3x tm-nav-icon"></i>
+                                            <i class="fas fa-ghost fa-3x tm-nav-icon"></i>
                                             <span class="tm-nav-text">Our Team</span>
                                             <div class="product__bg"></div>            
                                         </div>                                     
