Actalización imagenes del equipo
Añadidas las imágenes al portfolio de web

--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -87,7 +87,7 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/welcome-1.jpg" class="img-fluid mb-3">
+                                                        <img src="img/AvatarChristianCampos.png" class="img-fluid mb-3">
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Christian Campos Pan</p>
@@ -100,12 +100,12 @@
                                                         <p>Programador</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/welcome-2.jpg" class="img-fluid">
+                                                        <img src="img/AvatarGonzaloGomez.png" class="img-fluid">
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/welcome-1.jpg" class="img-fluid mb-3">
+                                                        <img src="img/AvatarHectorMuñoz.png" class="img-fluid mb-3">
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Hector Muñoz Gómez</p>
@@ -118,12 +118,12 @@
                                                         <p>Artista 2D</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/welcome-2.jpg" class="img-fluid">
+                                                        <img src="img/AvatarCecileBello.png" class="img-fluid">
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/welcome-1.jpg" class="img-fluid mb-3">
+                                                        <img src="img/AvatarUmeshMostajo.png" class="img-fluid mb-3">
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Umesh Mostajo Sáez</p>
@@ -136,12 +136,12 @@
                                                         <p>Artista 3D</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/welcome-2.jpg" class="img-fluid">
+                                                        <img src="img/AvatarNataliaMartínez.png" class="img-fluid">
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/welcome-1.jpg" class="img-fluid mb-3">
+                                                        <img src="img/AvatarPaulaRojo.png" class="img-fluid mb-3">
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Paula Rojo de la Fuente</p>
