--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -85,43 +85,43 @@
                                                         <h2 class="tm-page-title">Conoce al equipo</h2>
                                                     </div>
                                                 </div>
-                                                <div class="row">
+                                                <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/AvatarChristianCampos.png" class="img-fluid mb-3">
+                                                        <img src="img/AvatarChristianCampos.PNG" class="img-fluid mb-3">
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Christian Campos Pan</p>
                                                         <p>Programador</p>
                                                     </div>
                                                 </div>
-                                                <div class="row">
-                                                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                                                <div class="row align-items-center">
+                                                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
                                                         <p>Gonzalo Gómez Tejedor</p>
                                                         <p>Programador</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/AvatarGonzaloGomez.png" class="img-fluid">
+                                                        <img src="img/AvatarGonzaloGómez.png" class="img-fluid">
                                                     </div>
                                                 </div>
-                                                <div class="row">
+                                                <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/AvatarHectorMuñoz.png" class="img-fluid mb-3">
+                                                        <img src="img/AvatarHéctorMuñoz.PNG" class="img-fluid mb-3">
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Hector Muñoz Gómez</p>
                                                         <p>Programador</p>
                                                     </div>
                                                 </div>
-                                                <div class="row">
-                                                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                                                <div class="row align-items-center">
+                                                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
                                                         <p>Cecile Laura Bello Duprez</p>
                                                         <p>Artista 2D</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/AvatarCecileBello.png" class="img-fluid">
+                                                        <img src="img/AvatarCécileBello.png" class="img-fluid">
                                                     </div>
                                                 </div>
-                                                <div class="row">
+                                                <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <img src="img/AvatarUmeshMostajo.png" class="img-fluid mb-3">
                                                     </div>
@@ -130,8 +130,8 @@
                                                         <p>Artista 2D</p>
                                                     </div>
                                                 </div>
-                                                <div class="row">
-                                                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                                                <div class="row align-items-center">
+                                                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
                                                         <p>Natalia Martínez Clemente</p>
                                                         <p>Artista 3D</p>
                                                     </div>
@@ -139,7 +139,7 @@
                                                         <img src="img/AvatarNataliaMartínez.png" class="img-fluid">
                                                     </div>
                                                 </div>
-                                                <div class="row">
+                                                <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <img src="img/AvatarPaulaRojo.png" class="img-fluid mb-3">
                                                     </div>
