--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -100,12 +100,12 @@
                                                         <p>Programador</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/AvatarGonzaloGómez.png" class="img-fluid">
+                                                        <img src="img/AvatarGonzaloGomez.png" class="img-fluid">
                                                     </div>
                                                 </div>
                                                 <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/AvatarHéctorMuñoz.PNG" class="img-fluid mb-3">
+                                                        <img src="img/AvatarHectorMuñoz.PNG" class="img-fluid mb-3">
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Hector Muñoz Gómez</p>
@@ -118,7 +118,7 @@
                                                         <p>Artista 2D</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <img src="img/AvatarCécileBello.png" class="img-fluid">
+                                                        <img src="img/AvatarCecileBello.png" class="img-fluid">
                                                     </div>
                                                 </div>
                                                 <div class="row align-items-center">
