--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -108,13 +108,13 @@
                                                         <img src="img/AvatarHectorMuñoz.PNG" class="img-fluid mb-3">
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                        <p>Hector Muñoz Gómez</p>
+                                                        <p>Héctor Muñoz Gómez</p>
                                                         <p>Programador</p>
                                                     </div>
                                                 </div>
                                                 <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
-                                                        <p>Cecile Laura Bello Duprez</p>
+                                                        <p>Cécile Laura Bello Duprez</p>
                                                         <p>Artista 2D</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
