Actualizada mi descripción en Portfolio
He añadido mi descripción en la sección de conoce a nuestro equipo

--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -133,7 +133,9 @@
                                                 <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
                                                         <p>Natalia Martínez Clemente</p>
-                                                        <p>Artista 3D</p>
+                                                        <p>
+                                                            Creadora de entornos 3D. Ferviente amante de los animales y los juegos Cozy.
+                                                            Si le regalas tortitas serás su número 1.</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <img src="img/AvatarNataliaMartínez.png" class="img-fluid">
