Actualización de mi descripción en Portfolio

--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -127,7 +127,8 @@
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Umesh Mostajo Sáez</p>
-                                                        <p>Artista 2D</p>
+                                                        <p>Artista 2D y diseñador de personajes. Frikazo de Disney y de los mundos de fantasía. 
+                                                            Pasa más tiempo en su mundo interior que en este.</p>
                                                     </div>
                                                 </div>
                                                 <div class="row align-items-center">
