--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -148,7 +148,9 @@
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Paula Rojo de la Fuente</p>
-                                                        <p>Artista 3D</p>
+                                                        <p>
+                                                            Artista 3D y diseñadora. Le encantan las historias y lo giros de guión.
+                                                            Rompe todo lo que toca y se lo contagia a los de su alrrededor.</p>
                                                     </div>
                                                 </div>
                                             </div>
