Descripción de Cécile, Gonzalo y Christian en Portfolio

--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -91,13 +91,15 @@
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Christian Campos Pan</p>
-                                                        <p>Programador</p>
+                                                        <p>Jefe de programación y diseñador de mecánicas. Ama los videojuegos roguelike, el manga y picar código. 
+                                                            El trozo de pan del grupo.</p>
                                                     </div>
                                                 </div>
                                                 <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
                                                         <p>Gonzalo Gómez Tejedor</p>
-                                                        <p>Programador</p>
+                                                        <p>Programador, persona, aficionado al fútbol y a los videojuegos. 
+                                                            Encuentra y maneja todo tipo de herramientas digitales.</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <img src="img/AvatarGonzaloGomez.png" class="img-fluid">
@@ -115,7 +117,8 @@
                                                 <div class="row align-items-center">
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
                                                         <p>Cécile Laura Bello Duprez</p>
-                                                        <p>Artista 2D</p>
+                                                        <p>Artista 2D y 3D. Gran soñadora y creadora de historias interminables. 
+                                                            "Un buen libro es el mejor amigo del hombre, fin de la discusión".</p>
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <img src="img/AvatarCecileBello.png" class="img-fluid">
@@ -150,7 +153,7 @@
                                                         <p>Paula Rojo de la Fuente</p>
                                                         <p>
                                                             Artista 3D y diseñadora. Le encantan las historias y lo giros de guión.
-                                                            Rompe todo lo que toca y se lo contagia a los de su alrrededor.</p>
+                                                            Rompe todo lo que toca y se lo contagia a los de su alrededor.</p>
                                                     </div>
                                                 </div>
                                             </div>
