--- a/Oonga Bunga Template/index.html
+++ b/Oonga Bunga Template/index.html
@@ -111,7 +111,8 @@
                                                     </div>
                                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                                         <p>Héctor Muñoz Gómez</p>
-                                                        <p>Programador</p>
+                                                        <p>Programador, apasionado de los videojuegos y de perder lps en el lol.
+                                                        Solo tengo stickers de gatos ^-^.  </p>
                                                     </div>
                                                 </div>
                                                 <div class="row align-items-center">
